<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_squad_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/squad_profile"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/ll_squad_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_squad_settings">

        <TextView
            android:id="@+id/txt_squad_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Взвод №1674" />

        <ImageView
            android:id="@+id/iv_edit_squad_number"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_squad_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="74dp"
        android:background="@drawable/button_with_borders"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_squad_settings">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_squad_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/squad_number"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/black"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_send_new_number"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_accept" />

        <ImageView
            android:id="@+id/iv_reject_new_number"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_squad_class_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="98dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_squad_settings">

        <TextView
            android:id="@+id/txt_squad_class_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="День занятий: Понедельник" />

        <ImageView
            android:id="@+id/iv_edit_squad_class_day"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_squad_class_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="74dp"
        android:background="@drawable/button_with_borders"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_squad_settings">

        <Spinner
            android:id="@+id/sp_squad_class_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:entries="@array/days"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal" />


        <ImageView
            android:id="@+id/iv_send_new_class_day"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_accept" />

        <ImageView
            android:id="@+id/iv_reject_new_class_day"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_squad_announcement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="176dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_squad_settings">

        <TextView
            android:id="@+id/txt_squad_announcement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Объявление: Здесь пока ничего нет цукцук ewtvwetcwetwetcwetcwetwetcwet" />

        <ImageView
            android:id="@+id/iv_edit_squad_announcement"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:src="@drawable/ic_edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_squad_announcement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_with_borders"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_squad_settings">

        <EditText
            android:id="@+id/et_squad_announcement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:entries="@array/days"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:text="wqewqewqrvwq89rn wqr n8wq9 rnyw8q90rw8q9cnqw8rwqinceqwouie" />


        <ImageView
            android:id="@+id/iv_send_new_announcement"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_accept" />

        <ImageView
            android:id="@+id/iv_reject_new_announcement"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_delete_squad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="328dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete_squad"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_squad_settings" />

    <Button
        android:id="@+id/btn_update_link_invitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="384dp"
        android:backgroundTint="@color/colorPrimary"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_squad_settings"
        tools:text="@string/turn_off_link_invitation" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/requests"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_link_invitation" />

    <TextView
        android:id="@+id/tv_empty_request_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/requests_empty"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_link_invitation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_requests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>